weather app add

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,10 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+app.owm.base-url=https://api.openweathermap.org/data/2.5
+app.owm.api-key=${OWM_API_KEY}
+
+
 
 server.error.include-stacktrace=never
 server.error.include-message=always
