--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,9 @@ spring.jpa.properties.hibernate.format_sql=true
 app.owm.base-url=https://api.openweathermap.org/data/2.5
 app.owm.api-key=${OWM_API_KEY}
 
+app.ors.base-url=https://api.openrouteservice.org
+app.ors.api-key=${ORS_API_KEY}
+
 
 
 server.error.include-stacktrace=never
